kubernetes/cert-manager/letsencrypt-staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    certmanager.k8s.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - nambrosini.xyz
    secretName: staging-tls
  rules:
    - host: nambrosini.xyz
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: example-app
              port:
                number: 80
